Add a search bar

--- a/index.html
+++ b/index.html
@@ -79,6 +79,38 @@
           <i data-feather="search"></i>
           <input type="search" class="form-control" placeholder="Search...">
         </div>
+
+        <div class="navbar-search">
+          <div class="navbar-search-header">
+            <input type="search" class="form-control" placeholder="Search...">
+            <a id="navbarSearchClose" href="" class="link-03 mg-l-5 mg-lg-l-10"><i data-feather="x"></i></a>
+          </div><!-- navbar-search-header -->
+          <div class="navbar-search-body">
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">IAM Permissions</label>
+            <ul class="list-unstyled">
+              <li><a href="/iam/a4b">a4b:ApproveSkill</a></li>
+              <li><a href="/iam/a4b">a4b:ApproveSkill</a></li>
+            </ul>
+
+            <hr class="mg-y-30 bd-0">
+
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">API Methods</label>
+
+            <ul class="list-unstyled">
+              <li><a href="/api/a4b">AlexaForBusiness.ApproveSkill</a></li>
+              <li><a href="/api/a4b">AlexaForBusiness.ApproveSkill</a></li>
+            </ul>
+
+            <hr class="mg-y-30 bd-0">
+
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">Managed Policies</label>
+
+            <ul class="list-unstyled">
+              <li><a href="/managedpolicies/AlexaForBusinessFullAccess">AlexaForBusinessFullAccess</a></li>
+            </ul>
+          </div><!-- navbar-search-body -->
+        </div><!-- navbar-search -->
+
         <nav class="nav">
           <a href="/usage" class="nav-link"><i data-feather="help-circle"></i></a>
         </nav>
