--- a/index.html
+++ b/index.html
@@ -87,26 +87,21 @@
           </div><!-- navbar-search-header -->
           <div class="navbar-search-body">
             <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">IAM Permissions</label>
-            <ul class="list-unstyled">
-              <li><a href="/iam/a4b">a4b:ApproveSkill</a></li>
-              <li><a href="/iam/a4b">a4b:ApproveSkill</a></li>
+            <ul id="search-iam-list" class="list-unstyled">
             </ul>
 
             <hr class="mg-y-30 bd-0">
 
             <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">API Methods</label>
 
-            <ul class="list-unstyled">
-              <li><a href="/api/a4b">AlexaForBusiness.ApproveSkill</a></li>
-              <li><a href="/api/a4b">AlexaForBusiness.ApproveSkill</a></li>
+            <ul id="search-api-list" class="list-unstyled">
             </ul>
 
             <hr class="mg-y-30 bd-0">
 
             <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">Managed Policies</label>
 
-            <ul class="list-unstyled">
-              <li><a href="/managedpolicies/AlexaForBusinessFullAccess">AlexaForBusinessFullAccess</a></li>
+            <ul id="search-managedpolicies-list" class="list-unstyled">
             </ul>
           </div><!-- navbar-search-body -->
         </div><!-- navbar-search -->
