--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
             <a id="navbarSearchClose" href="" class="link-03 mg-l-5 mg-lg-l-10"><i data-feather="x"></i></a>
           </div><!-- navbar-search-header -->
           <div class="navbar-search-body">
-            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">IAM Permissions</label>
-            <ul id="search-iam-list" class="list-unstyled">
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-5 d-flex align-items-center">IAM Permissions</label>
+            <ul id="search-iam-list" class="list-unstyled" style="flex-wrap: wrap;">
             </ul>
 
             <hr class="mg-y-30 bd-0">
 
-            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">API Methods</label>
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-5 d-flex align-items-center">API Methods</label>
 
-            <ul id="search-api-list" class="list-unstyled">
+            <ul id="search-api-list" class="list-unstyled" style="flex-wrap: wrap;">
             </ul>
 
             <hr class="mg-y-30 bd-0">
 
-            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-10 d-flex align-items-center">Managed Policies</label>
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-5 d-flex align-items-center">Managed Policies</label>
 
-            <ul id="search-managedpolicies-list" class="list-unstyled">
+            <ul id="search-managedpolicies-list" class="list-unstyled" style="flex-wrap: wrap;">
             </ul>
           </div><!-- navbar-search-body -->
         </div><!-- navbar-search -->
