Tags on policies

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                 </ol>
               </nav>
               <h4 class="mg-b-0 tx-spacing--1 managedpolicyname"></h4>
+              <span id="managedpolicytags"></span>
             </div>
             <div class="d-none d-md-block">
               <button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button>
