--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                   <ul class="list-inline d-flex mg-t-20 mg-sm-t-10 mg-md-t-0 mg-b-0">
                     <li class="list-inline-item d-flex align-items-center">
                       <span class="d-block wd-10 ht-10 bg-df-1 rounded mg-r-5"></span>
-                      <span class="tx-sans tx-uppercase tx-10 tx-medium tx-color-03">API Methods</span>
+                      <span class="tx-sans tx-uppercase tx-10 tx-medium tx-color-03">IAM Permissions</span>
                     </li>
                     <li class="list-inline-item d-flex align-items-center mg-l-5">
                       <span class="d-block wd-10 ht-10 bg-df-2 rounded mg-r-5"></span>
-                      <span class="tx-sans tx-uppercase tx-10 tx-medium tx-color-03">IAM Permissions</span>
+                      <span class="tx-sans tx-uppercase tx-10 tx-medium tx-color-03">API Methods</span>
                     </li>
                   </ul>
                 </div><!-- card-header -->
@@ -285,12 +285,12 @@
                   <div class="pos-absolute t-20 l-20 wd-xl-100p z-index-10">
                     <div class="row">
                       <div class="col-sm-5">
-                        <h3 class="tx-normal tx-rubik tx-spacing--2 mg-b-5" id="dashboard-api-total"></h3>
-                        <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-10">API Methods</h6>
-                      </div><!-- col -->
-                      <div class="col-sm-5 mg-t-20 mg-sm-t-0">
                         <h3 class="tx-normal tx-rubik tx-spacing--2 mg-b-5" id="dashboard-iam-total"></h3>
                         <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-10">IAM Permissions</h6>
+                      </div><!-- col -->
+                      <div class="col-sm-5 mg-t-20 mg-sm-t-0">
+                        <h3 class="tx-normal tx-rubik tx-spacing--2 mg-b-5" id="dashboard-api-total"></h3>
+                        <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-10">API Methods</h6>
                       </div><!-- col -->
                     </div><!-- row -->
                   </div>
@@ -373,7 +373,7 @@
               <div class="card card-body">
                 <h4 class="mg-b-10">About permissions.cloud</h4>
                 <p class="mg-b-10">The permissions.cloud website uses a variety of information gathered within the <a target="_blank" href="https://github.com/iann0036/iam-dataset">IAM Dataset</a> and exposes that information in a clean, easy-to-read format.</p>
-                <p class="mg-b-10">permissions.cloud was built in order to provide an alternate, community-driven source of truth for AWS identity. If you would like to contribute to or suggest a feature for this website, please <a target="_blank" href="https://github.com/iann0036/permissions.cloud/issues">raise it</a> in the <a target="_blank" href="https://github.com/iann0036/permissions.cloud">permissions.cloud repo</a>. If you have found a data issue with the IAM permissions or API methods, please <a target="_blank" href="https://github.com/iann0036/iam-dataset/issues">raise it</a> in the <a target="_blank" href="https://github.com/iann0036/iam-dataset">IAM Dataset</a> repo.</p>
+                <p class="mg-b-10">permissions.cloud was built in order to provide an alternate, community-driven source of truth for AWS identity. If you would like to contribute to or suggest a feature for this website, please <a target="_blank" href="https://github.com/iann0036/permissions.cloud/issues">raise it</a> in the permissions.cloud <a target="_blank" href="https://github.com/iann0036/permissions.cloud">repo</a>. If you have found a data issue with the IAM permissions or API methods, please <a target="_blank" href="https://github.com/iann0036/iam-dataset/issues">raise it</a> in the IAM Dataset <a target="_blank" href="https://github.com/iann0036/iam-dataset">repo</a>.</p>
                 <p class="mg-b-10">The website can be navigated using the left sidebar or by quickly looking up a specific managed policy, IAM permission or API method in the top search bar.</p>
 
                 <hr class="mg-y-40">
