--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
 
     <div class="content ht-100v pd-0">
       <div class="content-header">
-        <div class="content-search">
-          <i data-feather="search"></i>
-          <input type="search" class="form-control" placeholder="Search...">
-        </div>
+        <a id="search-nav" href="">
+          <div class="content-search">
+            <i data-feather="search"></i>
+            <p class="tx-color-03" style="margin-top: 1rem;">Search...</p>
+          </div>
+        </a>
 
         <div class="navbar-search">
           <div class="navbar-search-header">
