New undocumented tag for IAM

--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@
                     </thead>
                     <tbody>
                       <tr>
+                        <td><span class="badge badge-danger">undocumented</span></td>
+                        <td>An IAM permission tag that indicates the permission is not documented in the official <a target="_blank" target="https://docs.aws.amazon.com/service-authorization/latest/reference/reference.html">Service Authorization Reference</a> but has been identified as existing.</td>
+                      </tr>
+                      <tr>
                         <td><span class="badge badge-primary">required</span></td>
                         <td>An IAM permission tag that indicates that the presence of an entry matching the preceeding ARN template is required.</td>
                       </tr>
