Try omnibox search

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <link rel="preload" href="https://iann0036.github.io/iam-dataset/docs.json" as="fetch" crossorigin>
     <link rel="preload" href="https://iann0036.github.io/iam-dataset/iam_definition.json" as="fetch" crossorigin>
 
+    <!-- omnibox search -->
+    <link rel="search" href="https://permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="permissions.cloud"/>
+
     <!-- vendor css -->
     <link href="/lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
