Show cred and res exposure items

--- a/index.html
+++ b/index.html
@@ -414,6 +414,14 @@
                         <td>A managed policy or managed policy action tag that indicates the presence of an action that could potentially lead to a privilege escalation.</td>
                       </tr>
                       <tr>
+                        <td><span class="badge badge-info">credentials exposure</span></td>
+                        <td>A managed policy or managed policy action tag that indicates the presence of an action that could produce a response that contains credentials.</td>
+                      </tr>
+                      <tr>
+                        <td><span class="badge badge-info">resource exposure</span></td>
+                        <td>A managed policy or managed policy action tag that indicates the presence of an action that could expose AWS resources to the public.</td>
+                      </tr>
+                      <tr>
                         <td><span class="badge badge-danger">malformed</span></td>
                         <td>A managed policy tag that indicates the presence of a malformed statement within the policy.</td>
                       </tr>
